# slidescape

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  annotation.c  annotation.h  arena.h  caselist.c  caselist.h  common.h  font_test.c  font_test.h  glad.c  gui.cpp  gui.h  imconfig.h  imgui_impl_win32.cpp  index.md  intrinsics.h  jpeg_decoder.c  jpeg_decoder.h  libtomcrypt.c  mathutils.c  mathutils.h  openslide.c  openslide_api.h  platform.c  platform.h  random.c  render_group.c  render_group.h  sdl2_main.c  server.c  shader.c  shader.h  stringified_shaders.c  stringutils.c  stringutils.h  tiff.c  tiff.h  (+13 more)
doc/: README_console.txt  renderer_refactor_handoff.md  tile_streamer_handoff.md
doc/lz4/: lz4.c.txt
doc/slidescape-console-examples/: convert_all.bat  crop_all.bat
doc/tlse/: LICENSE
resources/: install_desktop_file.sh.in  slidescape.desktop.in  slidescape.exe.manifest  uninstall_desktop_file.sh.in
resources/icon/: icon.icns  icon.rc
shaders/: basic.frag  basic.vert  finalblit.frag  finalblit.vert  heatmap_tile.frag  heatmap_tile.vert  text.frag  text.vert  ui.frag  ui.vert
src/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  Info.plist  annotation.c  annotation.cpp  annotation.h  arena.h  caselist.c  caselist.cpp  caselist.h  coco.cpp  coco.h  common.h  config.h  freetype_api.c  freetype_api.h  glad.c  glad31.c  glad45.c  gui.cpp  gui.h  imconfig.h  imgui_freetype.cpp  imgui_impl_opengl3.cpp  imgui_impl_osx.mm  imgui_impl_win32.cpp  ini.c  intrinsics.h  isyntax.c  isyntax.h  isyntax_dwt.c  jpeg_decoder.c  jpeg_decoder.h  json.h  libtomcrypt.c  linux_main.cpp  linux_platform.cpp  macos_main.h  macos_main.mm  (+44 more)
src/core/: annotation.cpp  annotation.h  annotation_asap_xml.cpp  annotation_geojson.cpp  app_input.cpp  caselist.cpp  caselist.h  coco.cpp  coco.h  commandline.cpp  console.cpp  gui.cpp  gui.h  heatmap.c  image.c  image.h  image_loader.c  image_loader.h  image_registration.c  image_registration.h  image_resize.c  image_resize.h  ini.c  ini.h  remote.c  remote.h  renderer.h  renderer_opengl.c  renderer_opengl.h  renderer_opengl_shader.c  renderer_opengl_shader.h  scene.cpp  slide_score.c  slide_score.h  tile_cache.c  tile_cache.h  tile_loader.c  tile_loader.h  tile_streamer.c  tile_streamer.h  (+11 more)
src/dicom/: dicom.c  dicom.cpp  dicom.h  dicom_dict.c  dicom_dict.h  dicom_dict_gen.c  dicom_tags.h  dicom_wsi.c  dicom_wsi.h
src/imgui/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  imconfig.h  imgui.h  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl.cpp
src/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl.cpp
src/isyntax/: isyntax.c  isyntax.h  isyntax_dwt.c  isyntax_reader.c  isyntax_reader.h  isyntax_streamer.c  isyntax_streamer.cpp  isyntax_streamer.h  libisyntax.c  libisyntax.h
src/mrxs/: mrxs.c  mrxs.h
src/platform/: arena.h  common.h  glad.c  graphical_app.c  graphical_app.h  intrinsics.h  linux_gui.cpp  linux_main.cpp  linux_platform.c  linux_platform.cpp  linux_utils.c  linux_utils.cpp  listing.h  macos_main.h  macos_main.mm  macos_url_handler.mm  openslide_api.c  openslide_api.h  platform.c  platform.h  platform_mutex.c  platform_mutex.h  platform_renderer.cpp  platform_renderer.h  platform_renderer_backend.h  presenter.cpp  presenter.h  presenter_backend.h  presenter_backend_sdl_opengl.cpp  presenter_backend_win32_opengl.cpp  sdl_renderer_opengl.cpp  shader.c  shader.h  win32_graphical_app.c  win32_graphical_app.h  win32_gui.cpp  win32_gui.h  win32_main.cpp  win32_main.h  win32_platform.c  (+11 more)
src/tiff/: tif_lzw.c  tif_lzw.h  tiff.c  tiff.h  tiff_write.c  tiff_write.h  tiff_xml.c
src/utils/: benaphore.c  benaphore.h  block_allocator.c  block_allocator.h  crc32.c  crc32.h  hdf5reader.c  hdf5reader.h  jpeg_decoder.c  jpeg_decoder.h  mathutils.c  mathutils.h  memrw.c  memrw.h  phasecorrelate.c  phasecorrelate.h  profiler.c  profiler.h  random.c  stringutils.c  stringutils.h  timerutils.c  timerutils.h  triangulate.c  triangulate.h
tests/: CMakeLists.txt  test_fixtures.cpp  test_main.cpp  test_mathutils.cpp  test_memrw.cpp  test_slide_score.cpp  test_stb_sprintf.cpp  test_stringutils.cpp  test_support.cpp  test_work_queue.cpp
tests/fixtures/: README.md  local_manifest.example.txt  manifest.txt
